# whitebox-tempest-plugin

./: .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  README.rst  bindep.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.tox/pep8/: .tox-config1  pip-selfcheck.json
devstack/: plugin.sh  settings
playbooks/: whitebox.yaml
playbooks/templates/: compute_nodes.yaml.j2
playbooks/whitebox/: pre.yaml
rhostest_tempest_plugin/: README.rst  base.py  config.py  plugin.py
rhostest_tempest_plugin/api/: test_sample.py
rhostest_tempest_plugin/lib/: mysql.py  virshxml.py
rhostest_tempest_plugin/scenario/: test_pointer_device_type.py
rhostest_tempest_plugin/services/: clients.py  mysql.py
rhostest_tempest_plugin/tests/: test_placeholder.py
rhostest_tempest_plugin/tests/api/: base.py  test_sample.py
rhostest_tempest_plugin/tests/scenario/: test_archive_deleted_rows.py  test_pointer_device_type.py  test_refresh_quota_usages.py  test_vcpu_pinning.py
roles/whitebox-common/tasks/: main.yml
roles/whitebox-nova-compute/tasks/: main.yml
whitebox_tempest_plugin/: base.py  config.py  exceptions.py  hardware.py  plugin.py  utils.py
whitebox_tempest_plugin/common/: utils.py  waiters.py
whitebox_tempest_plugin/scenario/: test_pointer_device_type.py  test_refresh_quota_usages.py
whitebox_tempest_plugin/services/: clients.py
whitebox_tempest_plugin/tests/: base.py  test_base.py  test_clients.py  test_placeholder.py  test_utils.py
zuul.d/: master-jobs.yaml  project.yaml  stable-jobs.yaml
(+38 files in other folders)
