[metadata]
name = RHOS-Test-Plugin
summary = RHOS specific test suite
description-file =
    README.rst
author = Joe Hakim Rahme
author-email = jhakimra@redhat.com
home-page = http://github.com/joehakimrahme/rhostest-plugin/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    rhostest_tempest_plugin

[entry_points]
tempest.test_plugins =
    rhostest-tempest-plugin = rhostest_tempest_plugin.plugin:RHOSTempestPlugin
